--- a/src/main/webapp/personcenter/css/templatemo-orange.css
+++ b/src/main/webapp/personcenter/css/templatemo-orange.css
@@ -289,3 +289,116 @@ footer {
     font-size: 20px;
   }
 }
+
+/*边框*/
+
+.border {
+    border: 1px solid #eee;
+}
+
+.bt-1 {
+    border-top: 1px solid #eee;
+}
+
+.bb-1 {
+    border-bottom: 1px solid #eee;
+}
+
+.bl-1 {
+    border-left: 1px solid #eee;
+}
+
+.br-1 {
+    border-right: 1px solid #eee;
+}
+
+/*底部导航*/
+
+nav {
+    position: fixed;
+    bottom: 0;
+    background: #fff;
+    width: 100%;
+    line-height: 22px;
+}
+
+nav a {
+    display: block;
+    box-sizing: border-box;
+    float: left;
+    padding-top: 6px;
+    width: 25%;
+    height: 48px;
+    text-align: center;
+    color: #999
+}
+
+nav a:hover {
+    color: #999;
+    text-decoration: none;
+}
+
+nav a span {
+    display: block;
+}
+
+nav a span.nav-title {
+    font-size: 11px
+}
+
+nav a.current {
+    color: #5bc371
+}
+
+nav a span.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 2.2rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+
+/*导航-首页*/
+
+.nav-home .iconfont:before {
+    content: "\e602";
+}
+
+.nav-home.current .iconfont:before {
+    content: "\e603";
+}
+
+
+/*导航-看新闻*/
+
+.nav-news .iconfont:before {
+    content: "\e604";
+}
+
+.nav-news.current .iconfont:before {
+    content: "\e605";
+}
+
+
+/*导航-我的账户*/
+
+.nav-user .iconfont:before {
+    content: "\e606";
+}
+
+.nav-user.current .iconfont:before {
+    content: "\e607";
+}
+
+
+/*导航-我的客服*/
+
+.nav-customer-service .iconfont:before {
+    content: "\e609";
+}
+
+.nav-customer-service.current .iconfont:before {
+    content: "\e608";
+}
